@startuml
'https://plantuml.com/class-diagram

left to right direction

class User {
  id : INTEGER
  client : INTEGER
  address : INTEGER
  created_at : DATETIME
}

class Client{
  id : INTEGER
  login : VARCHAR32
  password : VARCHAR60
  name : VARCHAR32
  description : LONGTEXT
  address : INTEGER
  siret : INTEGER
  siren : INTEGER
  tva : VARCHAR13
  created_at : DATETIME
}

class Address{
  id : INTEGER
  number : INTEGER
  adverb : VARCHAR16
  street : VARCHAR64
  postal : INTEGER
  city : VARCHAR64
  country : VARCHAR64
}

class Product{
  id : INTEGER
  brand : VARCHAR32
  commercial_name : VARCHAR32
  model : VARCHAR32
  rom : INTEGER
  ram : INTEGER
  battery : INTEGER
  launched_at : DATETIME
  created_at : DATETIME
  price : INTEGER
}

User::client_id "*" -- "1" Client::id : Belong to >
Client::address "*" -- "1" Address::id : domiciled at >
User::address "*" -- "1" Address::id : domiciled at >

@enduml